--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Set working directory
+      run: cd nodeServer/app
+
     - name: Install dependencies
       run: npm install
 
