--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,9 +21,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    
 
     - name: Install dependencies
       run: npm install
+      working-directory: COMP3000_Solar_Controller/nodeServer/app
 
     - name: Build the application (if needed)
       run: npm run build
