--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     
-
+    
+    - name: Set working directory
+      run: cd COMP3000_Solar_Controller/nodeServer/app
+      
     - name: Install dependencies
       run: npm install
       working-directory: COMP3000_Solar_Controller/nodeServer/app
