--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     
-    
+    - name: Set working directory
+      run: cd ..
 
 
     - name: Install dependencies
