--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,22 +1,29 @@
-name: Run Tests and Build
+# This workflow will do a clean install of node dependencies, build the source code, and run tests across different versions of the node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: Node.js CI
 
 on:
   push:
-    branches:
-      - main
-
+    branches: [ main ]
 jobs:
-  test-and-build:
+  build:
+
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.x]
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-      - run: npm install
-        working-directory: ./nodeserver/app
-      - run: npm run build --if-present
-      - run: npm testMock
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+      working-directory: ./nodeserver/app
+    - run: npm run build --if-present
+      working-directory: ./nodeserver/app
+    - run: npm testMock
+      working-directory: ./nodeserver/app
