--- a/NodeAPI/package.json
+++ b/NodeAPI/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:development": "cross-env NODE_ENV=development node app.js"
+    "start:development": "cross-env NODE_ENV=development node ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "morgan": "~1.9.1"
